src/objects/QPMS__Customer_Experience_Type__c.object
<CustomObject>
    <description>This object stores customer experience type records.</description>
    <fields>
        <fullName>QPMS__Adverse_Event_Codes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to store Adverse Event Codes</description>
        <label>Adverse Event Codes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Allow_Multiple_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Multiple Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__ApprovalProcess__c</fullName>
        <description>This field stores the name of approval process value</description>
        <label>ApprovalProcess</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CEMTypeStatusChange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Group__c</fullName>
        <description>This field is used to store Approval Group value</description>
        <label>Approval Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Process_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check approval process is completed or not</description>
        <label>Approval Process Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Process_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify whether the approval process is completed or not</description>
        <label>Approval Process Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to store Approval Required value</description>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Status__c</fullName>
        <description>This field stores the approval status of this record</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used  in Approval process</description>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Experience_Types2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used  in Approval process</description>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Experience_Types3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used  in Approval process</description>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Experience_Types4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used  in Approval process</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Experience_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CEM_Status__c</fullName>
        <description>This field is used to store CEM status value</description>
        <label>CEM Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Configure_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to store Configure Workflow value</description>
        <label>Configure Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__CurrentApprovalSequenceNumber__c</fullName>
        <description>This field used in sequential approval process</description>
        <inlineHelpText>This field holds the sequence of the current approver who is supposed to approve the record</inlineHelpText>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Evaluation_Codes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to store Evaluation Codes needed or not</description>
        <label>Evaluation Codes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>For Data Migration/Integraion purposes</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Facility_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to store Facility Information value</description>
        <label>Facility Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field is use store the initial submitter value from approval process</description>
        <inlineHelpText>The field is use store the initial submitter value from approval process</inlineHelpText>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Experience_TypesObxd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Security__c</fullName>
        <description>This field is used to save the site value</description>
        <label>Initiating Site Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save site values</description>
        <label>Initiating Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Customer Experience Types</relationshipLabel>
        <relationshipName>Customer_Experience_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Last_Sync_Time__c</fullName>
        <inlineHelpText>last sync time of the complaint</inlineHelpText>
        <label>Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QPMS__Last_Transaction_Result__c</fullName>
        <inlineHelpText>hold details of integration errors</inlineHelpText>
        <label>Last Transaction Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver__c</fullName>
        <description>This field stores notes for approvers when this record submitted for approval</description>
        <inlineHelpText>This field stores notes for approvers when this record submitted for approval</inlineHelpText>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Number_Scheme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Numbering Scheme will be referred by Complaints</description>
        <label>Number Scheme</label>
        <referenceTo>QPMS__Number_Scheme__c</referenceTo>
        <relationshipLabel>Customer Experience Types</relationshipLabel>
        <relationshipName>Customer_Experience_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Owner_Name__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; +Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Product_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to store Product Information flag</description>
        <label>Product Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Product_Problem_Codes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to store Product Problem Codes flag</description>
        <label>Product Problem Codes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Purpose__c</fullName>
        <description>This field is used to store Purpose value</description>
        <label>Purpose</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Reason__c</fullName>
        <description>This field is used to display the reason for active/inactive</description>
        <inlineHelpText>To display the reson for active/inactive</inlineHelpText>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regulatory Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Body__c</fullName>
        <description>This field is used to store Regulatory Body value</description>
        <label>Regulatory Body</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>US-FDA</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Resolution_Code__c</fullName>
        <description>This field is used to store Resolution Code value</description>
        <label>Resolution Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complaint Workflow</fullName>
                    <default>true</default>
                    <label>Complaint Workflow</label>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                    <isActive>false</isActive>
                    <label>Discarded</label>
                </value>
                <value>
                    <fullName>No investigation Required</fullName>
                    <isActive>false</isActive>
                    <label>No investigation Required</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <description>This field is used to store Sequence value</description>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <description>This field is used to store Signed Off Details value</description>
        <label>Signed Off Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Site_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Location</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Customer Experience Types (Site Location)</relationshipLabel>
        <relationshipName>Customer_Experience_Types1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <description>This field is used to store Status value</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In-Review</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Title__c</fullName>
        <description>This field is used to store Customer Experience Type Title</description>
        <label>Title</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <description>This field is used to store Type value</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Complaints</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__User_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to User Information value</description>
        <label>User Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to store Flag to make record locked when it is submitted for approval</description>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Experience Type</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Title__c</columns>
        <columns>QPMS__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CET-{00000}</displayFormat>
        <label>Customer Experience Type Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Experience Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>